Kubernetes 1.18.5实验配置文件/02 Service和Ingress/02 Ingress/Nginx Ingress/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels:
    run: nginx-deploy
  name: nginx-deploy
spec:
  replicas: 6
  selector: 
    matchLabels:
      run: nginx-deploy
  template:
    metadata:
      labels:
        run: nginx-deploy
    spec:
      containers:
      - name: nginx-deploy
        image: nginx 
        ports:
        - name: nginx
          containerPort: 80
