Kubernetes 1.18.5实验配置文件/02 Service和Ingress/02 Ingress/Nginx Ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  namespace: nginx-ingress
  labels:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/part-of: nginx-ingress
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/part-of: nginx-ingress
