Kubernetes 1.18.5实验配置文件/02 Service和Ingress/02 Ingress/Nginx Ingress/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    run: nginx-deploy
