Kubernetes 1.18.5实验配置文件/02 Service和Ingress/02 Ingress/Nginx Ingress/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.mengshicheng.io 
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
